--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --public --config ./webpack.config.js",
-    "build": "webpack --config ./webpack.product.config.js"
+    "start": "NODE_ENV=development webpack-dev-server --progress --config ./build/webpack.config.js",
+    "build": "NODE_ENV=production webpack-cli --config ./build/webpack.config.js",
+    "autod": "autod"
   },
   "repository": {
     "type": "git",
@@ -22,14 +23,15 @@
     "@svgr/webpack": "4.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
+    "autod": "^3.1.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chalk": "^2.4.2",
     "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
+    "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.0",
     "eslint-loader": "2.1.2",
@@ -39,29 +41,35 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
+    "find-up": "^3.0.0",
     "fs-extra": "7.0.1",
     "fsevents": "2.0.6",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "mini-css-extract-plugin": "0.5.0",
+    "loader-utils": "^1.2.3",
+    "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
     "react-app-polyfill": "^1.0.0",
-    "react-dev-utils": "^9.0.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
+    "strip-ansi": "^5.2.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
+    "text-table": "^0.2.0",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
-    "webpack-dev-server": "3.2.1",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
+  },
+  "dependencies": {
+    "react": "^16.8.6"
   }
 }
