--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "dependencies": {
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
