--- a/package.json
+++ b/package.json
@@ -71,12 +71,12 @@
   },
   "dependencies": {
     "antd": "^3.16.6",
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "uiw-iconfont": "^1.4.1"
+    "redux-thunk": "^2.3.0"
   }
 }
