--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ branches:
     - master
 env:
  global:
-   # 我将其添加到了travis-ci的环境变量中
+   # 我将其添加到了travis-ci的环境变量中1
    #- GH_REF: github.com/yimogit/metools.git 
