--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,16 @@ notifications:
 before_install:
   # Update the npm client. Older clients cannot, e.g., handle scoped modules.
   - echo "before_install running..."
+  - echo pwd
 install:
   - echo "install running..."
-  - npm install
+  # - npm install
 before_script:
-  - ssh root@45.76.98.174
+  # - ssh root@45.76.98.174
   - echo "before_install running..."
 script:
   - echo "script running..."
-  - npm run build
+  # - npm run build
 after_success:
   - echo "after_success running..."
 after_failure:
@@ -31,3 +32,4 @@ env:
  global:
    # 我将其添加到了travis-ci的环境变量中1
    #- GH_REF: github.com/yimogit/metools.git 
+# scp -r ./public/* root@45.76.98.174:/root/workspace
