--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "autod": "^3.1.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "^2.4.2",
     "css-loader": "2.1.1",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-react-app": "^4.0.0",
+    "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
     "find-up": "^3.0.0",
     "fs-extra": "7.0.1",
@@ -55,7 +55,7 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
-    "react-app-polyfill": "^1.0.0",
+    "react-app-polyfill": "^1.0.4",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "strip-ansi": "^5.2.0",
@@ -64,8 +64,9 @@
     "text-table": "^0.2.0",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
