--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/bigxigua/note.git"
   },
-  "author": "",
+  "author": "BigXiGua",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/bigxigua/note/issues"
@@ -22,10 +22,8 @@
   "devDependencies": {
     "@babel/core": "7.4.3",
     "@svgr/webpack": "4.1.0",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
     "autod": "^3.1.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^8.0.0",
@@ -33,14 +31,11 @@
     "chalk": "^2.4.2",
     "css-loader": "2.1.1",
     "escape-string-regexp": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "3.0.1",
     "find-up": "^3.0.0",
     "fs-extra": "7.0.1",
