--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "NODE_ENV=development webpack-dev-server --progress --config ./build/webpack.config.js",
     "build": "NODE_ENV=production webpack-cli --config ./build/webpack.config.js",
     "test": "echo 'test'",
-    "autod": "autod"
+    "autod": "autod",
+    "lint": "eslint ./app/ --ext js --ext jsx"
   },
+  "pre-commit": [
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bigxigua/note.git"
@@ -32,10 +35,15 @@
     "css-loader": "2.1.1",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
     "file-loader": "3.0.1",
     "find-up": "^3.0.0",
     "fs-extra": "7.0.1",
@@ -50,6 +58,7 @@
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "pre-commit": "^1.2.2",
     "react-app-polyfill": "^1.0.4",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -66,13 +75,12 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "dependencies": {
-    "antd": "^3.16.6",
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "use-force-update": "^1.0.7",
+    "use-react-router": "^1.0.7"
   }
 }
