--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
+    "execa": "^4.0.0",
     "file-loader": "3.0.1",
     "find-up": "^3.0.0",
     "fs-extra": "7.0.1",
@@ -51,6 +52,7 @@
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "ora": "^4.0.3",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -59,6 +61,7 @@
     "postcss-safe-parser": "4.0.1",
     "pre-commit": "^1.2.2",
     "react-app-polyfill": "^1.0.4",
+    "request": "^2.88.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "strip-ansi": "^5.2.0",
