--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "dependencies": {
+    "@antv/g2plot": "^0.11.28",
     "axios": "^0.18.0",
     "js-beautify": "^1.10.3",
     "marked": "^0.8.0",
