--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "dependencies": {
     "@antv/g2plot": "^0.11.28",
     "axios": "^0.18.0",
+    "immer": "^5.3.6",
     "js-beautify": "^1.10.3",
     "marked": "^0.8.0",
     "react": "^16.8.6",
@@ -86,6 +87,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "to-markdown": "^3.1.1"
+    "to-markdown": "^3.1.1",
+    "use-immer": "^0.3.5"
   }
 }
