--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
-node_modules
 package-lock.json
-app/dist
 deploy.js
-.DS_Store
-app/public/.DS_Store
+
+# Numerous always-ignore extensions  
+*.bak  
+*.patch  
+*.diff  
+*.err  
+
+# temp file for git conflict merging  
+*.orig  
+*.log  
+*.rej  
+*.swo  
+*.swp  
+*.zip  
+*.vi  
+*~  
+*.sass-cache  
+*.tmp.html  
+*.dump  
+
+# OS or Editor folders  
+.DS_Store  
+._*  
+.cache  
+.project  
+.settings  
+.tmproj  
+*.esproj  
+*.sublime-project  
+*.sublime-workspace  
+nbproject  
+thumbs.db  
+*.iml  
+
+# Folders to ignore  
+.hg  
+.svn  
+.CVS  
+.idea  
+node_modules/  
+jscoverage_lib/  
+bower_components/  
+dist/
