--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "marked": "^0.8.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^12.2.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.6",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
