--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "is-wsl": "^1.1.0",
     "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^4.0.3",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "^7.0.1",
     "postcss-preset-env": "6.6.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "^4.0.1",
     "pre-commit": "^1.2.2",
     "react-app-polyfill": "^1.0.4",
     "request": "^2.88.0",
@@ -71,12 +71,13 @@
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
   "dependencies": {
+    "antd": "^4.2.5",
     "axios": "^0.18.0",
     "immer": "^5.3.6",
     "js-beautify": "^1.10.3",
@@ -85,6 +86,7 @@
     "react-beautiful-dnd": "^12.2.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.6",
+    "react-photoswipe": "^1.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "use-immer": "^0.3.5"
