--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "dependencies": {
-    "antd": "^4.2.5",
     "axios": "^0.18.0",
     "immer": "^5.3.6",
     "js-beautify": "^1.10.3",
@@ -89,6 +88,7 @@
     "react-photoswipe": "^1.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "to-markdown": "^3.1.1",
     "use-immer": "^0.3.5"
   }
 }
