--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react-app": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "^2.4.2",
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "2.1.1",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^6.6.0",
